# nxi.module

./: README.md
discord/: CMakeLists.txt  README.md  discord.cpp  discord.hpp
discord/source/: discord.h
dynamic/example.rust/: CMakeLists.txt  Cargo.toml
dynamic/example.rust/src/: lib.rs  nxi.rs
dynamic/example.rust/src/nxi/: capi.rs
static/adk/: CMakeLists.txt  adk.cpp  adk.hpp
static/discord/: CMakeLists.txt  discord.cpp  discord.hpp
